--- a/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
+++ b/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
@@ -2324,11 +2324,7 @@ document.addEventListener('DOMContentLoaded', function() {
 /* Name: On Click; */
 var el = document.getElementById('i2');
 
-el.addEventListener('click', function(e){
-    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2339,11 +2335,7 @@ bmShow('i79');
 /* Name: On Click; */
 var el = document.getElementById('i79');
 
-el.addEventListener('click', function(e){
-    /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2375,7 +2367,7 @@ var el = document.getElementById('i87');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
