--- a/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
+++ b/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
@@ -1020,7 +1020,7 @@ var el = document.getElementById('i260');
 
 el.addEventListener('click', function(e){
     /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
