--- a/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
+++ b/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
@@ -518,18 +518,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i4.i300.image.css:image/base/css*/
 #i300 { opacity: 1; }
 /*#/#*//*#i300.i301.positioning.css:positioning/base/css.2*/
@@ -556,6 +544,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(25px, 182px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(25px, 182px) rotate(0deg);
         transform: translate(0, 0) translate(25px, 182px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i256.image.css:image/base/css*/
 #i256 { opacity: 1; }
@@ -605,18 +605,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i95.shape.css:shape/base/css*/
-#i95 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i95 { cursor: pointer; }
-/*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
-#i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i5.i292.image.css:image/base/css*/
 #i292 { opacity: 1; }
 /*#/#*//*#i292.i293.positioning.css:positioning/base/css.2*/
@@ -643,6 +631,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(18px, 182px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(18px, 182px) rotate(0deg);
         transform: translate(0, 0) translate(18px, 182px) rotate(0deg);
+}
+/*#/#*//*#i5.i95.shape.css:shape/base/css*/
+#i95 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i95 { cursor: pointer; }
+/*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
+#i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i272.image.css:image/base/css*/
 #i272 { opacity: 1; }
@@ -722,8 +722,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(32px, 225px) rotate(0deg);
         transform: translate(0, 0) translate(32px, 225px) rotate(0deg);
 }
-/*#/#*//*#i6.i288.image.css:image/base/css*/
-#i288 { opacity: 1; }
 /*#/#*//*#i288.i289.positioning.css:positioning/base/css.2*/
 #i288 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
         -ms-transform: translate(0, 0) translate(8px, 225px) rotate(0deg);
@@ -860,6 +858,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i6.i288.image.css:image/base/css*/
+#i288 { opacity: 1; }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
@@ -883,14 +883,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/3gNvqfK.jpg"/>
-<!--#/#--><!--#i4.i91.shape.html:shape/html-->
-<div id="i91"></div>
 <!--#/#--><!--#i4.i300.image.html:image/html-->
 <img id="i300" src="https://i.imgur.com/kvvs1PM.png"/>
 <!--#/#--><!--#i4.i294.image.html:image/html-->
 <img id="i294" src="https://i.imgur.com/oZ9sDoq.png"/>
 <!--#/#--><!--#i4.i302.text.html:text/html-->
 <div id="i302">Por donde lo veas, un sabor increíble. Ven y compruébalo.</div>
+<!--#/#--><!--#i4.i91.shape.html:shape/html-->
+<div id="i91"></div>
 <!--#/#--><!--#i4.i256.image.html:image/html-->
 <img id="i256" src="https://i.imgur.com/ZL4IDNb.png"/>
 <!--#/#--><!--#i4.i260.image.html:image/html-->
@@ -905,14 +905,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/R81A8mV.jpg"/>
-<!--#/#--><!--#i5.i95.shape.html:shape/html-->
-<div id="i95"></div>
 <!--#/#--><!--#i5.i292.image.html:image/html-->
 <img id="i292" src="https://i.imgur.com/oZ9sDoq.png"/>
 <!--#/#--><!--#i5.i298.image.html:image/html-->
 <img id="i298" src="https://i.imgur.com/kvvs1PM.png"/>
 <!--#/#--><!--#i5.i296.text.html:text/html-->
 <div id="i296">Entendemos ese sentimiento increíble de disfrutar cada bocado.</div>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#--><!--#i5.i272.image.html:image/html-->
 <img id="i272" src="https://i.imgur.com/PG3f3IC.png"/>
 <!--#/#--><!--#i5.i268.image.html:image/html-->
@@ -976,13 +976,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i91.i177.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i91').addEventListener('click', function(e){
-    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 /*#/#*//*#i4.i300.image.js:image/base/js*/
 
 /*#/#*//*#i300.i301.positioning.js:positioning/base/js.2*/
@@ -993,6 +986,13 @@ bmShow('i300');
 bmShow('i294');
 /*#/#*//*#i302.i303.positioning.js:positioning/base/js.2*/
 bmShow('i302');
+/*#/#*//*#i91.i177.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i91').addEventListener('click', function(e){
+    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i4.i256.image.js:image/base/js*/
 
 /*#/#*//*#i256.i257.positioning.js:positioning/base/js.2*/
@@ -1020,7 +1020,7 @@ var el = document.getElementById('i260');
 
 el.addEventListener('click', function(e){
     /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1051,13 +1051,6 @@ if ('click' === 'click') {
  
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i95.i175.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i95').addEventListener('click', function(e){
-    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 /*#/#*//*#i5.i292.image.js:image/base/js*/
 
 /*#/#*//*#i292.i293.positioning.js:positioning/base/js.2*/
@@ -1068,6 +1061,13 @@ bmShow('i292');
 bmShow('i298');
 /*#/#*//*#i296.i297.positioning.js:positioning/base/js.2*/
 bmShow('i296');
+/*#/#*//*#i95.i175.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i95').addEventListener('click', function(e){
+    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i272.image.js:image/base/js*/
 
 /*#/#*//*#i272.i273.positioning.js:positioning/base/js.2*/
@@ -1078,7 +1078,7 @@ var el = document.getElementById('i272');
 
 el.addEventListener('click', function(e){
     /*#i274.i275.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1095,7 +1095,7 @@ var el = document.getElementById('i268');
 
 el.addEventListener('click', function(e){
     /*#i270.i271.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1112,7 +1112,7 @@ var el = document.getElementById('i280');
 
 el.addEventListener('click', function(e){
     /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1130,7 +1130,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/RYtDpN6rouoZJk6eA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i284.image.js:image/base/js*/
@@ -1143,7 +1143,7 @@ var el = document.getElementById('i284');
 
 el.addEventListener('click', function(e){
     /*#i286.i287.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1160,7 +1160,7 @@ var el = document.getElementById('i276');
 
 el.addEventListener('click', function(e){
     /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1177,7 +1177,7 @@ var el = document.getElementById('i288');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1225,10 +1225,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i91.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i300.image.meta:image/meta*/
 name: kvvs1PM.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1242,6 +1238,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i302.text.meta:text/meta*/
 name: Por donde lo veas, un sabor increíble. Ven y compruébalo.; customName: false;
 /*#/#*//*#i302.i303.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i91.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i256.image.meta:image/meta*/
 name: FB; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1269,10 +1269,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i95.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i292.image.meta:image/meta*/
 name: oZ9sDoq.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1286,6 +1282,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i296.text.meta:text/meta*/
 name: Entendemos ese sentimiento increíble de disfrutar cada bocado.; customName: false;
 /*#/#*//*#i296.i297.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i95.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i272.image.meta:image/meta*/
 name: wp copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
