--- a/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
+++ b/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
@@ -2324,18 +2324,26 @@ document.addEventListener('DOMContentLoaded', function() {
 /* Name: On Click; */
 var el = document.getElementById('i2');
 
-
+el.addEventListener('click', function(e){
+    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
 bmShow('i79');
-/*#/#*//*#i79.i83.actions.js:actions/base/js.1*/
+/*#/#*//*#i79.i97.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i79');
 
-
+el.addEventListener('click', function(e){
+    /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/RYtDpN6rouoZJk6eA'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2350,7 +2358,7 @@ var el = document.getElementById('i85');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://www.facebook.com/sharer/sharer.php?u=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/RYtDpN6rouoZJk6eA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2367,7 +2375,7 @@ var el = document.getElementById('i87');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2384,7 +2392,7 @@ var el = document.getElementById('i89');
 
 el.addEventListener('click', function(e){
     /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://goo.gl/maps/RYtDpN6rouoZJk6eA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
