--- a/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
+++ b/Grupo Alsea/P.F. Chang/Cube/main/Cube_pfchang_final.html
@@ -1078,7 +1078,7 @@ var el = document.getElementById('i272');
 
 el.addEventListener('click', function(e){
     /*#i274.i275.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1160,7 +1160,7 @@ var el = document.getElementById('i276');
 
 el.addEventListener('click', function(e){
     /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://pfchangsmexico.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
