--- a/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
+++ b/Grupo Alsea/P.F. Chang/FINALISIMO_VENETTIAN_P.F.CHANG/main/Venetian_PF.Chang.html
@@ -2375,7 +2375,7 @@ var el = document.getElementById('i87');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/RYtDpN6rouoZJk6eA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
